--- a/views/shared/layout.pug
+++ b/views/shared/layout.pug
@@ -1,4 +1,3 @@
-doctype html 
 doctype html
 html(lang="en")
     head
@@ -7,3 +6,18 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Document
     body
+        header
+            div.logo
+            nav
+                ul
+                    li
+                        a(href="/menu") Menu
+                    li 
+                        a(href="#") About us
+                    li 
+                        a(href="/admin") Admin
+    // each page can have thier own content below after extending this layout
+    block main-content
+    footer
+        p &copy; Copyright Priyam Desai 
+
