Added css and script block for layouts

--- a/views/admin/dashboard.pug
+++ b/views/admin/dashboard.pug
@@ -1,5 +1,8 @@
 extends ../shared/layout
 
+block append scripts
+    script(src="/js/dashboard.js") 
+
 block main-content
     main
         h1 Admin Dashboard
