--- a/views/shared/layout.pug
+++ b/views/shared/layout.pug
@@ -4,6 +4,11 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        block styleSheets
+            link(rel="stylesheet", type="text/css", href="/css/style.css")
+        block scripts
+            script(src="/js/script.js") 
+            
         title Document
     body
         header
