--- a/views/shared/layout.pug
+++ b/views/shared/layout.pug
@@ -11,8 +11,8 @@ html(lang="en")
             
         title Document
     body
-        header
-            div.logo
+        header.content-wrapper
+            div.logo Tea Time
             nav
                 ul
                     li
@@ -23,6 +23,6 @@ html(lang="en")
                         a(href="/admin") Admin
     // each page can have thier own content below after extending this layout
     block main-content
-    footer
+    footer.content-wrapper
         p &copy; Copyright Priyam Desai 
 
