--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,89 @@
-body{
-    background-color: lightblue;
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+
+/* css variables */
+:root{
+    --primary-color: #266E7A;
+    --secodary-color: #FFFFFF;
+    --primary-text: #1E5862;
+    --secondary-text: #F5F5F5;
 }
+
+/* some global css style*/
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html{
+    scroll-behavior: smooth;
+    font-size: 1em;
+}
+
+body{
+    /* background-color: var(--primary-color); */
+    background-color: white;
+    font-family: 'Poppins', sans-serif;
+    color: black;
+}
+
+.content-wrapper{
+    max-width: 1380px;
+    margin: 0 auto;
+}
+
+a{
+    text-decoration: none;
+    color: white;
+}
+
+
+
+/* style for header */
+
+
+header{
+    background-color: var(--primary-color);
+    height: 68px;
+    padding: 0 12px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo{
+    font-family: 'Pacifico', monospace;
+    font-size: 2em;
+    color: var(--secondary-text);
+}
+
+nav ul{
+    list-style: none;
+    display: flex;
+    gap: 42px;
+    text-transform: uppercase;
+    font-weight: 400;
+    font-size: 1.5em;
+    letter-spacing: 2px;
+}
+
+nav a{
+    position: relative;
+}
+
+nav a:hover{
+    border-bottom: 3px solid var(--secondary-text);
+    transition: 2ms ease;
+}
+
+
+
+  
+
+
+
+
+
+
+
