--- a/views/shared/layout.pug
+++ b/views/shared/layout.pug
@@ -24,5 +24,6 @@ html(lang="en")
     // each page can have thier own content below after extending this layout
     block main-content
     footer.content-wrapper
-        p &copy; Copyright Priyam Desai 
+        div.logo Tea Time
+        p &copy; Design by Priyam Desai for HTTP5222 Assignment 1
 
