--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,14 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
-/* css variables */
+/* --------------------------------
+
+    1. CSS Variables 
+    2. Global style (default)
+    3. Style for header
+    4. Style for popular item page 
+    4. Style footer 
+
+ -------------------------------- */
+
+
+/* 1. css variables */
 :root{
     --primary-color: #266E7A;
     --secodary-color: #FFFFFF;
     --primary-text: #1E5862;
     --secondary-text: #F5F5F5;
+    --primary-btn: #0D3B47;
 }
 
-/* some global css style*/
+/* 2, some global css style*/
 *{
     margin: 0;
     padding: 0;
@@ -37,11 +49,33 @@ a{
     color: white;
 }
 
+a:hover{
+    color: black;
+}
 
 
-/* style for header */
+input[type=submit]{
+    width: 200px;
+    background-color: var(--primary-btn);
+    border: none;
+    padding: 8px 12px;
+    color: var(--secodary-color);
+    font-size: 1.25em;
+    border-radius: 8px;
+    border: 2px solid var(--primary-btn);
+    font-weight: 500;
+
+}
+
+input[type=submit]:hover{
+    cursor: pointer;
+    border: 2px solid var(--primary-btn);
+    color: var(--primary-btn);
+    background-color: var(--secodary-color);
+}
 
 
+/* 3. style for header */
 header{
     background-color: var(--primary-color);
     height: 68px;
@@ -77,8 +111,30 @@ nav a:hover{
     transition: 2ms ease;
 }
 
+/* 4. style for second page */
+
+#popular-items{
+    height: 100vh;
+    background: rgb(38,110,122);
+    background: linear-gradient(180deg, rgba(38,110,122,1) 0%, rgba(184,211,217,1) 100%);
+}
 
 
+/* 5. style for footer */
+
+footer{
+    width: 100%;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(184,211,217,1);
+    flex-direction: column;
+}
+
+footer p{
+    color: var(--primary-btn)
+}
   
 
 
