--- a/views/shared/layout.pug
+++ b/views/shared/layout.pug
@@ -12,7 +12,8 @@ html(lang="en")
         title Document
     body
         header.content-wrapper
-            div.logo Tea Time
+            div.logo
+                a(href="/") Tea Time
             nav
                 ul
                     li
