--- a/public/css/style.css
+++ b/public/css/style.css
@@ -138,7 +138,30 @@ footer p{
   
 
 
+/* 6. Style which is used by multiple pages */
+.items-container{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 80px;
+}
 
+.item-container{
+    max-width: 320px;
+}
+
+.item-title{
+    font-size: 1.5em;
+    letter-spacing: 1.5px;
+    color: #FFFFFF;
+}
+
+.item-image{
+    width: 300px;
+    height: 380px;
+    border-radius: 12px;
+    object-fit: contain;
+}
 
 
 
