--- a/views/admin/dashboard.pug
+++ b/views/admin/dashboard.pug
@@ -4,6 +4,11 @@ block append scripts
     script(src="/js/dashboard.js") 
 
 block main-content
-    main
+    main.content-wrapper
         h1 Admin Dashboard
         a(href="admin/add-product") Add Product
+
+        .stats-container
+            h2.stat-label Total Item - 22
+            h2.stat-label Total Tea - 12
+            h2.stat-label 
