--- a/views/menu/menu.pug
+++ b/views/menu/menu.pug
@@ -1,11 +1,8 @@
 extends ../shared/layout
 
-block append styleSheets
-    link(rel="stylesheet", href="/css/menu.css")
-
 
 block main-content
-    main.content-wrapper
+    main.content-wrapper#menu
         h1 Menu
 
         .menu-item-container
