--- a/views/admin/dashboard.pug
+++ b/views/admin/dashboard.pug
@@ -1,14 +1,21 @@
 extends ../shared/layout
 
+block append styleSheets
+    link(rel="stylesheet", href="/css/dashboard.css")
+
 block append scripts
     script(src="/js/dashboard.js") 
 
 block main-content
-    main.content-wrapper
+    main.content-wrapper#dashboard
         h1 Admin Dashboard
-        a(href="admin/add-product") Add Product
+
 
         .stats-container
             h2.stat-label Total Item - 22
             h2.stat-label Total Tea - 12
-            h2.stat-label 
+            h2.stat-label Total Ice Tea - 6
+
+        .add-item-container 
+                form(action="/admin/add-product", method="get")
+                    input(type="submit", value="Add a new item in menu") 
