--- a/views/index/index.pug
+++ b/views/index/index.pug
@@ -4,7 +4,7 @@ block append styleSheets
     link(rel="stylesheet", href="/css/index.css")
 
 block main-content
-    main.content-wrapper
+    main.content-wrapper#index
         .hero-text
             h1 Tea Time
             p We don't want people to have just 'a'
