--- a/views/shared/layout.pug
+++ b/views/shared/layout.pug
@@ -15,13 +15,19 @@ html(lang="en")
             div.logo
                 a(href="/") Tea Time
             nav
-                ul
+                ul#nav-menu
                     li
                         a(href="/menu") Menu
                     li 
                         a(href="#") About us
                     li 
                         a(href="/admin") Admin
+                
+                .hamburger
+                    span.bar 
+                    span.bar 
+                    span.bar 
+
     // each page can have thier own content below after extending this layout
     block main-content
     footer.content-wrapper
