--- a/public/css/style.css
+++ b/public/css/style.css
@@ -175,7 +175,7 @@ footer p{
     width: 300px;
     height: 380px;
     border-radius: 12px;
-    object-fit: contain;
+    object-fit: cover;
 }
 
 
