--- a/views/index/index.pug
+++ b/views/index/index.pug
@@ -22,7 +22,7 @@ block main-content
     section#popular-items.content-wrapper
         .section-heading
             h2#sec-heading Popular items
-        .items-container
+        .items-container.popular-items-container
             .item-container
                 img(src="/images/tea-one.jpg", alt="", srcset="").item-image
                 h3.item-title Masala Chai
